openshift/nginx-with-basic-auth/nginx_route.yml
apiVersion: v1
kind: Route
metadata:
  name: kibana
spec:
  host: kibana-antony.com
  to:
    kind: Service
    name: kibana
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
